# GastroRP-Backend

./: Cargo.toml
src/: main.rs
src/database/: mod.rs
src/database/migrations/: 0001_create_product.sql  0002_update_products_table.sql  0003_add_category_column.sql  0004_create_order_table.sql  0005_create_item_order_table.sql
src/services/: mod.rs
src/services/order/: model.rs  service.rs
src/services/product/: models.rs  service.rs
