[package]
name = "api-gratro-rp"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-async-std", "macros", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
apistos = "0.6.0"
schemars = { package = "apistos-schemars", version = "0.8" }

